60-eks/app/05-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: roboshop-gateway
  namespace: roboshop
spec:
  gatewayClassName: roboshop-aws-alb
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: roboshop-aws-alb-config
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      options:
        gateway.k8s.aws/certificate-arn: "arn:aws:acm:us-east-1:050734936364:certificate/87cc5c94-6937-4d49-bc3b-8471382d1818"
    allowedRoutes:
      namespaces:
        from: Same
